--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -716,7 +716,7 @@ In Coq the difference between \m{bool} and \m{Prop} is very clear and hard to mi
 
 This is what has indeed happened to our initial template. We declared the return type of \m{short} to be \m{bool} and then branched on it in the definition of \m{qs}. This causes the information on shortness to not be present in the else branch, so that the only sensible domain for \m{choosePivot} is \m{list A}, which leads to problems with filling the template that we have already seen.
 
-How do we avoid making such mistakes in the future? To learn that, we have to look at the problem from a more general perspective first. One such perspective, which also encompasses many other phenomena, stems from making a distinction between implicit and explicit information.\footnote{The terms and the whole perspective are mine. I don't know if it appears anywhere in the literature.} A piece of information is explicit when it is backed by evidence\footnote{For the purpose of the current paragraph, ``evidence'' is basically synonymous with judgments of type theory, as presented in section \ref{mltt}} that and implicit otherwise. This distinction can be likened to that between language and metalanguage or theory and metatheory: explicit information is information internal to the system (in our case, available inside Coq), whereas implicit information is information external to the system (in our case, available to us, but not necessarily to Coq).
+How do we avoid making such mistakes in the future? To learn that, we have to look at the problem from a more general perspective first. One such perspective, which also encompasses many other phenomena, stems from making a distinction between implicit and explicit information.\footnote{The terms and the whole perspective are mine. I don't know if it appears anywhere in the literature.} A piece of information is explicit when it is backed by evidence\footnote{For the purpose of the current paragraph, ``evidence'' is basically synonymous with judgments of type theory, as presented in section \ref{mltt}} and implicit otherwise. This distinction can be likened to that between language and metalanguage or theory and metatheory: explicit information is information internal to the system (in our case, available inside Coq), whereas implicit information is information external to the system (in our case, available to us, but not necessarily to Coq).
 
 An example: the lists \m{[1; 2; 3]} and \m{[2; 3; 1]} are obviously permutations of each other, but given only this, the information stays implicit. If we also have a proof of \m{Permutation [1; 2; 3] [2; 3; 1]}, the information becomes explicit, with the proof being our evidence. Another example: if we pattern match on a list \m{l}, then in the \m{nil} branch we explicitly know that \m{l} is empty and the evidence is the fact that \m{l} and \m{nil} are convertible. In the \m{cons} case, we explicitly know that \m{l} is not empty and the evidence is the fact that \m{l} is convertible with \m{h\ ::\ t} where \m{h} is its head and \m{t} its tail.
 
@@ -771,11 +771,22 @@ In case of our template's \m{QSArgs} the difference doesn't matter very much and
 
 The algorithmic part of our journey has come to and end -- we now have a working quicksort template. If we fill it in with concrete details, we get a variant of quicksort that we can run to get a sorted list back\dots\ or not. So far, there's no guarantee that the result will be sorted, because the proof of correctness is missing, but an even more pressing concern is that there's no guarantee that we will get any answer whatsoever -- if we fill the template with gibberish, the resulting concrete algorithm need not terminate.
 
-This is because, in accordance with concept/technique \#2, we ignored the matter of termination by turning Coq's termination checker off. In this section we will develop a better template that, when it is instantiated, guarantees that the concrete algorithm necessarily terminates. We will first learn how to do it manually (while hoping that we won't ever have to use this knowledge) and then we'll see a Coq feature which automates these technique most of the time. In the meantime we will learn a generic technique for proving properties of functions.
+This is because, in accordance with concept/technique \#2, we ignored the matter of termination by turning Coq's termination checker off. In this section we will develop a better template that, when it is instantiated, guarantees that the concrete algorithm necessarily terminates. We will first learn how to do it manually (while hoping that we won't ever have to use this knowledge) and then we'll see a Coq feature which automates these techniques most of the time. In the meantime we will learn a generic technique for proving properties of functions.
 
 \subsection{The inductive domain method}
 
-\concept{Define a predicate that represents the shape of recursion in the algorithm and use it to implement a better template. Prove termination using well-founded induction.}
+How do we prove that our algorithm terminates? Before we tackle that question, let's first recall \textit{why} we have to prove it: the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination (or rather, strong normalization) it follows that Coq's logic is consistent. Thus, on the one hand the restriction to structural recursion protects us from contradiction (and other evils), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
+
+Structural recursion is to be contrasted with \textit{general recursion}, found in most programming languages, in which arguments of recursive calls can be arbitrary. This is very convenient for the pragmatic programmer, because it doesn't constrain him at all, but renders the language inconsistent as a logic, and thus absolutely useless for formal reasoning.\footnote{Note, however, that an inconsistent language can still be useful for the purpose of \textit{rigorous} reasoning. See \cite{FastAndLoose} for details.} Consider Haskell's \m{Void} type, for example, which is supposed to be empty, just like its Coq equivalent \m{False}. There is no direct way of making an element of \m{Void}, but using general recursion we can easily define a nonterminationg function \m{f\ ::\ a -> Void} (for example by writing \m{f x = f x}), which we can then use to obtain an element of \m{Void} (for example, \m{f ()\ ::\ Void}).
+
+Back to our (almost) initial question: we need to prove termination because only structural recursion is allowed and our algorithm is not structurally recursive. As for the truly initial question of how to do it, the answer might look like a revelation, but in hindsight it couldn't be more obvious.
+
+\begin{center}
+    \textbf{Formally verified algorithm concept/technique \#3.1} \\
+    Define a predicate that represents the shape of recursion in the algorithm and use it to implement a better template.
+\end{center}
+
+
 
 \subsection{Well-founded induction}
 
@@ -1054,6 +1065,10 @@ Mention thesis' repository: \url{wkolowski.github.io/RandomCoqCode/Thesis/}
     \textit{Formal Proof -- The Four-Color Theorem}, 2008, \\
     \url{http://www.ams.org/notices/200811/tx081101382p.pdf}
 
+\bibitem{FastAndLoose}
+    Nils Anders Danielsson, John Hughes, Patrik Jansson, Jeremy Gibbons, \\
+    \textit{Fast and Loose Reasoning is Morally Correct}, 2006, \\
+    \url{https://www.cs.ox.ac.uk/jeremy.gibbons/publications/fast+loose.pdf}
 \end{thebibliography}
 
 \end{document}
